# billboard-ai

./: .gitignore  README.md  index.html  pyproject.toml  vercel.json
.github/workflows/: vercel-prod.yml
audio/hook_demo_batches/: manifest.json
audio/published/: current_release.json
audio/shortform_hook_tests/: README.md  manifest.json  quality_report.csv  quality_report.json
audio/sprint1_local_demo_batch/: README.md  manifest.json
config/: hook_demo.toml  settings.toml  sprint1_local_hook_demo.toml  sprint2_promoted_hook_demo.toml
data/processed/: billboard_yearly.csv  cycle_analysis.json  summary.json
data/raw/: 1965_sample.csv
data/reference/: billboard_preview_reference_profile.json  billboard_preview_reference_tracks.csv  genre_lookup.csv
docs/: deploy-auto-vercel.md  final-release-pipeline.md
docs/creative/: top-candidate-briefs.md
docs/plans/: 2026-05-17-formal-release-execution-plan.md
docs/release/: park-revise-rerun-decision.md  release-candidate-one-pager.md  release-gate-checklist.md  similarity-risk-review.md
docs/reviews/: ai-billboard-quality-gate.md  sprint1-demo-scorecard.md  sprint1-tier-ranking.md
docs/shortform/: metrics-update-playbook.md  public-test-execution-checklist.md  public-test-log-template.csv  public-test-log-template.md  sprint1-hook-test-metrics.csv  (+4 more)
scripts/: build_billboard_reference_profile.py  evaluate_hook_demo_batch.py  publish_top_web_demo.py  run_final_release_pipeline.py  run_hook_demo_batch.py  run_pipeline.py  stage_vercel_static_output.py
tests/: test_hook_demo.py  test_pipeline.py
(+6 files in other folders)
